charts/v3.4.7/README.md
# CloudCasa Kubernetes Agent

[CloudCasa](https://cloudcasa.io) - Leader in Kubernetes Data Protection and Application Resilience

# Introduction

CloudCasa is a SaaS data protection, disaster recovery, migration, and replication solution for Kubernetes and cloud-native applications. Configuration is quick and easy, and basic service is free.

CloudCasa provides two types of backup services for Kubernetes: 
* **CloudCasa Pro** provides centralized backup, DR, and migration services for large, complex, multi-cluster, multi-cloud, and hybrid cloud environments. It includes multi-cloud account integration, managed backup storage, and advanced cross-cloud recovery.
* **CloudCasa Velero Management** provides centralized management and monitoring, guided recovery, and commercial support for existing Velero backup installations.

Whether you are managing existing Velero installations or using the advanced Pro features, with CloudCasa you don't need to be a storage or data protection expert to back up and restore your Kubernetes clusters.

This Helm chart installs and configures the CloudCasa agent on a Kubernetes cluster.
See the CloudCasa [Getting Started Guide](https://cloudcasa.io/get-started) for more information.

## Prerequisites

1. Kubernetes 1.20+
2. Helm 3.0+

## CloudCasa Deployment Options

CloudCasa supports both SaaS and self-hosted deployment models:

- **SaaS**: Use the default CloudCasa cloud-hosted service at https://home.cloudcasa.io
- **Self-Hosted**: Deploy CloudCasa in your own environment and configure the agent to connect to your self-hosted instance

## Installation
 
### Installing the CloudCasa Agent with SaaS

1. Log in to https://home.cloudcasa.io and add your Kubernetes cluster under Clusters/Overview. Note the returned cluster ID.
2. Add the CloudCasa Helm repo to your Helm configuration, if it hasn't been added already.
   ```
   $ helm repo add cloudcasa-repo https://catalogicsoftware.github.io/cloudcasa-helmchart
   ```
3. To install the agent, execute the following helm commands, replacing ```<Cluster ID>``` with the Cluster ID obtained above:
    ```
    $ helm repo update
    $ helm install cloudcasa cloudcasa-repo/cloudcasa --set clusterID=<Cluster ID>
    ```
This will install the CloudCasa agent and complete registration of the cluster with the CloudCasa service.

### Installing the CloudCasa Agent with Self-Hosted

For self-hosted CloudCasa deployments, configure the server address and TLS settings:

1. Obtain your cluster ID from your self-hosted CloudCasa instance.
2. Add the CloudCasa Helm repo to your Helm configuration, if it hasn't been added already.
   ```
   $ helm repo add cloudcasa-repo https://catalogicsoftware.github.io/cloudcasa-helmchart
   ```
3. To install the agent, execute the following helm commands, replacing the parameters with your self-hosted instance details:
    ```
    $ helm repo update
    $ helm install cloudcasa cloudcasa-repo/cloudcasa \
      --set clusterID=<Cluster ID> \
      --set server.address=<Your Self-Hosted Server Address>:<Port> \
      --set server.skipTLSVerification=<true|false> \
      --set image.repository=<Your Container Registry>/<Image Name> \
      --set image.tag=<Image Tag>
    ```

**Server Configuration Parameters:**
- `server.address`: The address and port of your self-hosted CloudCasa server (default: agent.cloudcasa.io:443)
- `server.skipTLSVerification`: Skip TLS certificate verification (default: false) - useful for self-signed certificates in testing

**Container Image Parameters:**
- `image.repository`: The container registry and image name for your self-hosted environment (default: cloudcasaAgent.azurecr.io/catalogicsoftware/amds-kagent)
- `image.tag`: The image tag to use (default: 3.1.0-prod)

**Note:** For self-hosted deployments, ensure that the container image is available in your specified container registry and that the Kubernetes cluster has the necessary permissions to pull the image. If your registry requires authentication, you can use the `imagePullSecret` parameter to reference a Kubernetes secret with registry credentials.

### Updating the CloudCasa Agent
1. Log in to https://home.cloudcasa.io (for SaaS) or your self-hosted instance and obtain the cluster ID for your cluster. You can also obtain the current setting with the command ```helm get values cloudcasa```.
2. Execute the following commands to update the agent, replacing ```<Cluster ID>``` with the Cluster ID obtained above:
    ```
    $ helm repo update
    $ helm upgrade cloudcasa cloudcasa-repo/cloudcasa --set clusterID=<Cluster ID>
    ```
   For self-hosted deployments, also include the `--set server.address=...` parameters as shown in the self-hosted installation section above.

### Uninstalling the CloudCasa Agent
1. Execute the following commands to uninstall CloudCasa.
    ```    
    $ helm uninstall cloudcasa
    ```

2. If you manually created the cloudcasa-io namespace in order to supply a container registry authentication secret (see below),
you may need to manually delete the namespace after uninstall with the command `kubectl delete namespace cloudcasa-io`.

3. CloudCasa creates some custom resource definitions on installation, which you can remove manually with the command `kubectl delete crd -l component=kubeagent-backup-helper`.

### Using an alternate image repository

The agent manager container can be installed from an alternate repository by setting values for image.repository and image.tag.
Add the options --set image.repository=<repository> and/or --set image.tag=<tag> to the helm install command.

Note that the alternate repository will also need to be set for the cluster in CloudCasa so that all agent containers will be loaded from it.
See the [CloudCasa User Guide](https://docs.cloudcasa.io/help/cluster-add.html) for more information.

If the registry you are using requires authentication, you can define a Kubernetes secret with the authentication information
and reference it by setting a value for imagePullSecret. Example: "--set imagePullSecret=registrySecret".
See the [Kubernetes Docs](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/) for more information.
Note that the secret must be created in the cloudcasa-io namespace, so you may need to create the namespace first.
Also note that when uninstalling the agent, you may need to delete the cloudcasa-io namespace manually after running helm uninstall with "kubectl delete namespace cloudcasa-io".

Finally, the secret name will also need to be set in CloudCasa for the cluster, so that it will be used for all agent containers.
See the [CloudCasa User Guide](https://docs.cloudcasa.io/help/cluster-add.html) for more information.

*CloudCasa is a trademark of Catalogic Software, Inc.*
